--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ title: Yuxuan Chen
 first_name: Yuxuan
 middle_name:
 last_name: Chen
+email: yuxuan19@illinois.edu
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
@@ -20,7 +21,7 @@ icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name 
 
 url: https://yuxuanjerrychen01.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
 
@@ -192,6 +193,8 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _books/
+  - _pages/cv.md
 keep_files:
   - CNAME
   - .nojekyll
