--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -24,7 +24,7 @@ github_username: yuxuanjerrychen01 # your GitHub user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: # your LinkedIn user name
+linkedin_username: yuxuanchen2001 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 orcid_id: 0009-0009-2159-8746 # your ORCID ID
